--- a/index.html
+++ b/index.html
@@ -70,5 +70,11 @@
             </div>
         </div>
     </section>
+    <section id="portfolio">
+        <div class="filtro"></div>
+        <div class="container-grid">
+            <a href="#">Conheça nosso Portfolio Gamificado</a>
+        </div>
+    </section>
 </body>
 </html>
