feat: formulario de contato adicionado

--- a/index.html
+++ b/index.html
@@ -76,5 +76,23 @@
             <a href="#">Conheça nosso Portfolio Gamificado</a>
         </div>
     </section>
+    <section id="contato">
+        <h2>Contate-nos</h2>
+        <form>
+            <div class="campo">
+                <label for="cnome">Qual é o seu nome?</label>
+                <input id="cnome" type="text" placeholder="Digite seu nome...">
+            </div>
+            <div class="campo">
+                <label for="cemail">Em qual email podemos te responder?</label>
+                <input type="email" name="" id="cemail" placeholder="Digite seu email...">
+            </div>
+            <div class="campo-textarea">
+                <label for="ctxt">Descreva um pouco da sua empresa, e também o problema que está procurando solucionar</label>
+                <textarea name="" id="ctxt" cols="30" rows="10" placeholder="Descreva sua empresa e o problema que ela enfrenta..."></textarea>
+            </div>
+            <button type="submit">enviar</button>
+        </form>
+    </section>
 </body>
 </html>
