--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
     <script src="script.js" defer></script>
 </head>
-<body onload="renderizarcases()">
+<body onload="carregarCases()">
     <div class="banner">
         <header>
             <div class="container-grid">
@@ -78,7 +78,7 @@
     </section>
     <section id="contato">
         <h2>Contate-nos</h2>
-        <form>
+        <form onsubmit="solicitarOrcamento()">
             <div class="campo">
                 <label for="cnome">Qual é o seu nome?</label>
                 <input id="cnome" type="text" placeholder="Digite seu nome...">
